@@ -61,12 +61,23 @@
 
     captureOutput = [AVCaptureVideoDataOutput new];
     captureOutput.alwaysDiscardsLateVideoFrames = YES;
+
+#ifdef FIXED_8697526
+    /* iOS 4.2 introduced a bug that causes [session startRunning] to
+     * hang if the session has a preview layer and this property is
+     * specified at the output.  As this happens to be the default
+     * setting for the currently supported devices, it can be omitted
+     * without causing a functional problem (for now...).  Of course,
+     * we still have no idea what the real problem is, or how robust
+     * this is as a workaround...
+     */
     captureOutput.videoSettings = 
         [NSDictionary
             dictionaryWithObject:
                 [NSNumber numberWithInt:
                     kCVPixelFormatType_420YpCbCr8BiPlanarVideoRange]
             forKey: (NSString*)kCVPixelBufferPixelFormatTypeKey];
+#endif
 
     queue = dispatch_queue_create("ZBarCaptureReader", NULL);
     [captureOutput setSampleBufferDelegate:
